Style and mission statement

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GovTrack</title>
+    <link rel="stylesheet" type:"text/css" href="styles.css">
 </head>
 <body>
     <article class="rep">  
@@ -40,5 +41,6 @@
             </p>
         </section>
     </article>
+    <script>document.querySelector(".rep").innerHTML = "This is your representative. Have Fun."</script>
 </body>
 </html>
